--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
                 <img class="card-img img-width1" src="img/card-1.png" alt="card">
                 <h4 class="heading-mini card__heading">Make Your business To Be
                     Better Famous In Internet</h4>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a class="card__ref" href="#">Learn more</a>
             </div>
             <div class="card card-margin">
                 <img class="card-img card__img-width2" src="img/card-2.png" alt="card">
                 <h4 class="heading-mini card__heading">Bring Technology To Your 
                     Comfrotable Home</h4>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a class="card__ref" href="#">Learn more</a>
             </div>
             <div class="card">
                 <img class="card-img img-width3" src="img/card-3.png" alt="card">
                 <h4 class="heading-mini card__heading">Build Your Digital Product
                     That Suitable For Your Need</h4>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <a class="card__ref" href="#">Learn more</a>
             </div>
         </div>
@@ -68,7 +68,7 @@
                 <p class="project__img2-text">Car-Rapetition App</p>
             </div>            
         </div>        
-    </div>
+    </div>    
     <div class="footer">
         <div class="container">
             <div class="footer__top">
@@ -91,8 +91,7 @@
                     <li class="text footer__list">+7-812-7313-4321</li>
                     <li class="text footer__list">hello.site@gmail.com</li>
                 </ol>
-                <p class="text footer__copy">2021 All rights reserved.</p>
-                
+                <p class="text footer__copy">2021 &copy; All rights reserved.</p>                
             </div>
         </div>        
     </div>
