--- a/contacts.html
+++ b/contacts.html
@@ -64,7 +64,7 @@
         </form>
     </div>
     <div class="container">        
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A8451185f739e22610dea564b5fb2a6b46e6563a4c413a47266581dfe587e7a6b&amp;width=100%25&amp;height=480&amp;lang=ru_RU&amp;scroll=true"></script>        
+        <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A8451185f739e22610dea564b5fb2a6b46e6563a4c413a47266581dfe587e7a6b&amp;width=100%25&amp;height=480&amp;lang=ru_RU&amp;scroll=true"></script>        
     </div>
     <div class="footer">
         <div class="container">
@@ -88,12 +88,10 @@
                     <li class="text footer__list">+7-812-7313-4321</li>
                     <li class="text footer__list">hello.site@gmail.com</li>
                 </ol>
-                <p class="text footer__copy">2021 All rights reserved.</p>
-                
+                <p class="text footer__copy">2021 &copy; All rights reserved.</p>                
             </div>
         </div>        
     </div>
-</body>
 </body>
 
 </html>
